--- a/index.html
+++ b/index.html
@@ -1,72 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/css/normalize.css" rel="stylesheet">
-  <link href="/css/style.css" rel="stylesheet">
-  <title>Document</title>
-</head>
-<body>
-  <div class="left-section">
-    <div class="logo">
-      Logo
-    </div>
-    <div class="image-source">Photo by <a href="https://unsplash.com/@joshhild?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Josh Hild</a> on <a href="https://unsplash.com/photos/K4WXehq5Alc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  
-    </div>
-  </div>
-  <div class="content">
-    <div class="header">
-      <p>This is not a real online service! You know you need something like
-        this in your life to help you realize your deepest dreams.</p>
-      <p>Sign up <em>now</em> to get started.</p>
-      <p>You <em>know</em> you want to</p>
-    </div>
-    <form class="signup-form" id="signup-form">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/normalize.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <title>Document</title>
+  </head>
 
-      <div class="form-flex-row">
+  <body>
+    <div class="left-section">
+      <div class="logo">
+        <img src=".././img/logo.png" />
+        <div class="brand-name">Logo</div>
+      </div>
+      <div class="source">
         <div>
-          <label for="first-name">First Name</label>
-          <input type="text" name="first-name" id="first-name">
+          Photo by
+          <a
+            href="https://unsplash.com/@joshhild?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >Josh Hild</a
+          >
+          on
+          <a
+            href="https://unsplash.com/photos/K4WXehq5Alc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >Unsplash</a
+          >
         </div>
         <div>
-          <label for="last-name">Last Name</label>
-          <input type="text" name="last-name" id="last-name">
+          Logo created by
+          <a
+            href="https://www.flaticon.com/free-icons/abstract"
+            title="abstract icons"
+            >Freepik - Flaticon</a
+          >
         </div>
       </div>
-
-      <div class="form-flex-row">
-        <div>
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email">
-        </div>
-        <div>
-          <label for="phone">Phone Number</label>
-          <input type="tel" name="phone" id="phone">
-        </div>
-      </div>
-
-      <div class="form-flex-row">
-        <div>
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password">
-        </div>
-        <div>
-          <label for="confirm-password">Confirm Password</label>
-          <input type="password" name="confirm-password" id="confirm-password">
-        </div>
-      </div>
-
-      
-    </form>
-    <div class="content-bottom">
-      <button type="submit" form="signup-form">Create Account</button>
-      <div>Already have an account? <a href="/">Log in</a></div>
     </div>
+    <div class="content">
+      <div class="header">
+        <p>
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams.
+        </p>
+        <p>Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to</p>
+      </div>
+      <form class="signup-form" id="signup-form">
+        <div class="form-flex-row">
+          <div>
+            <label for="first-name">First Name</label>
+            <input type="text" name="first-name" id="first-name" />
+          </div>
+          <div>
+            <label for="last-name">Last Name</label>
+            <input type="text" name="last-name" id="last-name" />
+          </div>
+        </div>
 
-  </div>
-  
-</body>
+        <div class="form-flex-row">
+          <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+          </div>
+          <div>
+            <label for="phone">Phone Number</label>
+            <input type="tel" name="phone" id="phone" />
+          </div>
+        </div>
+
+        <div class="form-flex-row">
+          <div>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" />
+          </div>
+          <div>
+            <label for="confirm-password">Confirm Password</label>
+            <input
+              type="password"
+              name="confirm-password"
+              id="confirm-password"
+            />
+          </div>
+        </div>
+      </form>
+      <div class="content-bottom">
+        <button type="submit" form="signup-form">Create Account</button>
+        <div>Already have an account? <a href="/">Log in</a></div>
+      </div>
+    </div>
+  </body>
 </html>
