--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="left-section">
       <div class="logo">
-        <img src=".././img/logo.png" />
-        <div class="brand-name">Logo</div>
+        <img src=".././img/logo.png" alt="Logo" />
+        <div class="brand-name">Blink</div>
       </div>
       <div class="source">
         <div>
@@ -42,12 +42,12 @@
       <div class="header">
         <p>
           This is not a real online service! You know you need something like
-          this in your life to help you realize your deepest dreams.
-        </p>
-        <p>Sign up <em>now</em> to get started.</p>
+          this in your life to help you realize your deepest dreams. <br>
+          Sign up <em>now</em> to get started.</p>
         <p>You <em>know</em> you want to</p>
       </div>
       <form class="signup-form" id="signup-form">
+        <h1>Let's do this!</h1>
         <div class="form-flex-row">
           <div>
             <label for="first-name">First Name</label>
