--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="left-section">
       <div class="logo">
-        <img src="./img/logo.png" alt="Logo" />
+        <img src=".././img/logo.png" alt="Logo" />
         <div class="brand-name">Blink</div>
       </div>
       <div class="source">
