--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./css/normalize.css" rel="stylesheet" />
+    <link href="css/normalize.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet" />
-    <script src="./js/script.js" defer=""></script>
+    <link href="css/style.css" rel="stylesheet" />
+    <script src="js/script.js" defer=""></script>
     <title>Document</title>
   </head>
 
   <body>
     <div class="left-section">
       <div class="logo">
-        <img src=".././img/logo.png" alt="Logo" />
+        <img src="img/logo.png" alt="Logo" />
         <div class="brand-name">Blink</div>
       </div>
       <div class="source">
